# geheimvz

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: docker-publish.yml
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_appearancesettings.py  0003_privacysettings.py  0004_alter_appearancesettings_owner_and_more.py  0005_notificationsettings_on_new_greeting.py
account/templatetags/: login.py
core/: account_adapter.py  admin.py  apps.py  forms.py  helpers.py  imagegenerators.py  imagekit_queue.py  models.py  signals.py  urls.py  views.py
core/assets/: main.css  main.ts
core/migrations/: 0001_initial.py  0002_user_birthday_user_favourite_books_and_more.py  0002_user_image_height_user_image_width_alter_user_image.py  0003_remove_user_appearance_background_and_more.py  0003_user_image.py  0004_alter_user_image.py  0005_remove_user_can_see_profile_and_more.py  0005_user_image_height_user_image_width_alter_user_image.py  0006_remove_user_birthday_remove_user_favourite_books_and_more.py  0007_user_invited_by.py
core/templates/: _background.html  _logo.html  base-login.html  base.html
emoticons/: emoticons.py  forms.py
emoticons/templatetags/: emoticons.py
friends/: forms.py  tables.py  tasks.py  urls.py  views.py
geheimvz/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
groups/: admin.py  forms.py  imagegenerators.py  models.py  signals.py  tables.py  tasks.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_group_image_height_group_image_width_and_more.py  0003_alter_group_image.py  0004_alter_group_image.py  0005_alter_group_name.py  0006_forumpost_attachment_forumpost_attachment_height_and_more.py
invites/: admin.py  forms.py  models.py  urls.py  views.py
invites/migrations/: 0001_initial.py
kubernetes/: Chart.yaml  values.yaml
kubernetes/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kubernetes-setttings-configmap.yaml  service.yaml  serviceaccount.yaml
motd/: admin.py  models.py
motd/migrations/: 0001_initial.py
my_account/: forms.py  models.py  urls.py  views.py
my_account/migrations/: 0001_initial.py  0002_appearancesettings.py  0003_privacysettings.py  0004_alter_appearancesettings_owner_and_more.py  0005_notificationsettings_on_new_greeting.py
my_profile/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
pinboard/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
private_messages/: apps.py  forms.py  models.py  tables.py  tasks.py  urls.py  views.py
search/: forms.py  tables.py  urls.py  views.py
static_pages/: urls.py
(+121 files in other folders)
